--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
 	<img src="Copy of slider_image.png" alt="image">
 </div>
+<div class="wrappers">
 <div class="slider_text">
 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
 <button id="button_send">BROWSE PORTFOLIO</button>
@@ -55,6 +56,7 @@
 			
 		</ul>
 	</div>
+</div>
 </div>
 </body>
 </html>
